Slightly modify package format for RAX parser.
git-svn-id: svn+ssh://www.freemed.info/var/lib/svn/freemed-modules@13 c066130b-aef2-0310-b50c-f7412185e6fe

--- a/unread_letters/package.xml
+++ b/unread_letters/package.xml
@@ -7,7 +7,9 @@
 		<description>Modules for allowing corrections and provider validation of outgoing letters.</description>
 	</information>
 	<install>
-		<directory>modules/unread_letters/</directory>
+		<directory>
+			<destination>modules/unread_letters/</destination>
+		</directory>
 		<file>
 			<source>letter_corrections.db.module.php</source>
 			<destination>modules/unread_letters/</destination>
