Added initial versions of clinical notes modules and type module.
git-svn-id: svn+ssh://www.freemed.info/var/lib/svn/freemed-modules@26 c066130b-aef2-0310-b50c-f7412185e6fe

--- a/treatment_plan/package.xml
+++ b/treatment_plan/package.xml
@@ -59,5 +59,17 @@
 			<source>treatment_plan_options.db.module.php</source>
 			<destination>modules/treatment_plan/</destination>
 		</file>
+		<file>
+			<source>treatment_plan_type.emr.module.php</source>
+			<destination>modules/treatment_plan/</destination>
+		</file>
+		<file>
+			<source>treatment_plan_clinical_notes.emr.module.php</source>
+			<destination>modules/treatment_plan/</destination>
+		</file>
+		<file>
+			<source>treatment_plan_clinical_notes_templates.db.module.php</source>
+			<destination>modules/treatment_plan/</destination>
+		</file>
 	</install>
 </freemedpackage>
