Add UI "hook" to push this into the menu.
git-svn-id: svn+ssh://www.freemed.info/var/lib/svn/freemed-modules@56 c066130b-aef2-0310-b50c-f7412185e6fe

--- a/food_assistance/package.xml
+++ b/food_assistance/package.xml
@@ -70,6 +70,11 @@
 			<source>foodassistanceitem.sql</source>
 			<destination>data/schema/mysql/</destination>
 		</file>
+	<!-- ----- User Interface Hooks ----- -->
+		<file>
+			<source>org.freemedsoftware.hook.task.patient.tpl</source>
+			<destination>ui/dojo/view/</destination>
+		</file>
 	<!-- ----- User Interface ----- -->
 	</install>
 </freemedpackage>
