Integrate better icon and build system from Teak Systems.
git-svn-id: svn+ssh://www.freemed.info/var/lib/svn/freemed-modules@58 c066130b-aef2-0310-b50c-f7412185e6fe

--- a/food_assistance/package.xml
+++ b/food_assistance/package.xml
@@ -41,7 +41,7 @@
 		</directory>
 	<!-- ----- Images / Icons ----- -->
 		<file>
-			<source>bread.png</source>
+			<source>images/soup_line.64x64.png</source>
 			<destination>ui/dojo/htdocs/icons/food_assistance/</destination>
 		</file>
 	<!-- ----- Modules ----- -->
