Reorganize to separate out dojo-based uri.
git-svn-id: svn+ssh://www.freemed.info/var/lib/svn/freemed-modules@65 c066130b-aef2-0310-b50c-f7412185e6fe

--- a/food_assistance/package.xml
+++ b/food_assistance/package.xml
@@ -80,12 +80,12 @@
 		</file>
 	<!-- ----- User Interface Hooks ----- -->
 		<file>
-			<source>org.freemedsoftware.hook.task.patient.tpl</source>
+			<source>dojo/org.freemedsoftware.hook.task.patient.tpl</source>
 			<destination>ui/dojo/view/</destination>
 		</file>
 	<!-- ----- User Interface ----- -->
 		<file>
-			<source>org.freemedsoftware.ui.foodassistance.engine.tpl</source>
+			<source>dojo/org.freemedsoftware.ui.foodassistance.engine.tpl</source>
 			<destination>ui/dojo/view/</destination>
 		</file>
 	</install>
